# TouchMind

./: README.md  pyproject.toml
TouchMind/: db.sqlite3  docker-compose.yml  manage.py
TouchMind/Core/: models.py  services.py  urls.py  views.py
TouchMind/Core/migrations/: 0001_initial.py  0002_remove_event_embedding.py  0003_event_embedding.py
TouchMind/Core/static/Core/: script.js  style-list.css  style.css
TouchMind/Core/templates/Core/: index.html  list.html
TouchMind/TouchMind/: asgi.py  settings.py  urls.py  wsgi.py
