[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "tempuraguruguru",email = "takuno125m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "sentence-transformers (>=5.4.0,<6.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
